--- a/awareness.html
+++ b/awareness.html
@@ -32,8 +32,8 @@
             <!-- Navigation Links -->
             <nav>
                 <a href="awareness.html" class="text-blue-600 px-4 py-2 rounded-lg font-medium hover:bg-blue-50 transition-colors">Awareness</a>
-                <a href="volunteer-signup.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors ml-2">Volunteer</a>
-                <a href="thank-you.html" class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition-colors ml-2 font-medium">Donate</a>
+                <a href="volunteersignup.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors ml-2">Volunteer</a>
+                <a href="thankyou.html" class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition-colors ml-2 font-medium">Donate</a>
             </nav>
         </div>
     </header>
@@ -62,8 +62,8 @@
                     Your support, whether through volunteering your time or making a donation, directly contributes to our ability to reach more people and create a healthier, more secure community.
                 </p>
                 <div class="flex flex-col sm:flex-row justify-center gap-4">
-                    <a href="volunteer-signup.html" class="bg-blue-600 text-white text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-blue-700 transition-transform transform hover:scale-105 font-semibold text-center">Become a Volunteer</a>
-                    <a href="thank-you.html" class="bg-green-600 text-white text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-green-700 transition-transform transform hover:scale-105 font-semibold text-center">Make a Donation Today</a>
+                    <a href="volunteersignup.html" class="bg-blue-600 text-white text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-blue-700 transition-transform transform hover:scale-105 font-semibold text-center">Become a Volunteer</a>
+                    <a href="thankyou.html" class="bg-green-600 text-white text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-green-700 transition-transform transform hover:scale-105 font-semibold text-center">Make a Donation Today</a>
                 </div>
             </div>
         </section>
