--- a/thankyou.html
+++ b/thankyou.html
@@ -32,8 +32,8 @@
             <!-- Navigation Links -->
             <nav>
                 <a href="awareness.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors">Awareness</a>
-                <a href="volunteer-signup.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors ml-2">Volunteer</a>
-                <a href="thank-you.html" class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition-colors ml-2 font-medium">Donate</a>
+                <a href="volunteersignup.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors ml-2">Volunteer</a>
+                <a href="thankyou.html" class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition-colors ml-2 font-medium">Donate</a>
             </nav>
         </div>
     </header>
@@ -59,7 +59,7 @@
                 <a href="awareness.html" class="bg-blue-600 text-white text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-blue-700 transition-transform transform hover:scale-105 font-semibold text-center">
                     Learn More About Our Cause
                 </a>
-                <a href="volunteer-signup.html" class="bg-gray-200 text-gray-800 text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-gray-300 transition-transform transform hover:scale-105 font-semibold text-center">
+                <a href="volunteersignup.html" class="bg-gray-200 text-gray-800 text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-gray-300 transition-transform transform hover:scale-105 font-semibold text-center">
                     Become a Volunteer
                 </a>
             </div>
