--- a/volunteersignup.html
+++ b/volunteersignup.html
@@ -32,8 +32,8 @@
             <!-- Navigation Links -->
             <nav>
                 <a href="awareness.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors">Awareness</a>
-                <a href="volunteer-signup.html" class="text-blue-600 px-4 py-2 rounded-lg font-medium hover:bg-blue-50 transition-colors ml-2">Volunteer</a>
-                <a href="thank-you.html" class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition-colors ml-2 font-medium">Donate</a>
+                <a href="volunteersignup.html" class="text-blue-600 px-4 py-2 rounded-lg font-medium hover:bg-blue-50 transition-colors ml-2">Volunteer</a>
+                <a href="thankyou.html" class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition-colors ml-2 font-medium">Donate</a>
             </nav>
         </div>
     </header>
