--- a/volunteersignup.html
+++ b/volunteersignup.html
@@ -28,10 +28,10 @@
     <header class="bg-white shadow-sm py-4">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <!-- NGO Logo/Name -->
-            <a href="awareness.html" class="text-2xl font-bold text-blue-700 rounded-lg p-2 hover:bg-gray-100 transition-colors">HopeMakers NGO</a>
+            <a href="index.html" class="text-2xl font-bold text-blue-700 rounded-lg p-2 hover:bg-gray-100 transition-colors">HopeMakers NGO</a>
             <!-- Navigation Links -->
             <nav>
-                <a href="awareness.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors">Awareness</a>
+                <a href="index.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors">Awareness</a>
                 <a href="volunteersignup.html" class="text-blue-600 px-4 py-2 rounded-lg font-medium hover:bg-blue-50 transition-colors ml-2">Volunteer</a>
                 <a href="thankyou.html" class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition-colors ml-2 font-medium">Donate</a>
             </nav>
