--- a/thankyou.html
+++ b/thankyou.html
@@ -28,10 +28,10 @@
     <header class="bg-white shadow-sm py-4">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <!-- NGO Logo/Name -->
-            <a href="awareness.html" class="text-2xl font-bold text-blue-700 rounded-lg p-2 hover:bg-gray-100 transition-colors">HopeMakers NGO</a>
+            <a href="index.html" class="text-2xl font-bold text-blue-700 rounded-lg p-2 hover:bg-gray-100 transition-colors">HopeMakers NGO</a>
             <!-- Navigation Links -->
             <nav>
-                <a href="awareness.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors">Awareness</a>
+                <a href="index.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors">Awareness</a>
                 <a href="volunteersignup.html" class="text-gray-700 px-4 py-2 rounded-lg font-medium hover:bg-gray-100 transition-colors ml-2">Volunteer</a>
                 <a href="thankyou.html" class="bg-green-600 text-white px-4 py-2 rounded-lg shadow-md hover:bg-green-700 transition-colors ml-2 font-medium">Donate</a>
             </nav>
@@ -56,7 +56,7 @@
             </div>
             <!-- Call to Action Buttons -->
             <div class="flex flex-col sm:flex-row justify-center gap-4">
-                <a href="awareness.html" class="bg-blue-600 text-white text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-blue-700 transition-transform transform hover:scale-105 font-semibold text-center">
+                <a href="index.html" class="bg-blue-600 text-white text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-blue-700 transition-transform transform hover:scale-105 font-semibold text-center">
                     Learn More About Our Cause
                 </a>
                 <a href="volunteersignup.html" class="bg-gray-200 text-gray-800 text-xl px-8 py-4 rounded-lg shadow-xl hover:bg-gray-300 transition-transform transform hover:scale-105 font-semibold text-center">
